log/test/192.168.56.101 2017_11_13 23_09_39.txt
R2>
<R2>display interface G0/0/0
GigabitEthernet0/0/0 current state : UP
Line protocol current state : UP
Last line protocol up time : 2017-11-13 23:09:33 UTC-08:00
Description:
Route Port,The Maximum Transmit Unit is 1500
Internet Address is 192.168.56.101/24
IP Sending Frames' Format is PKTFMT_ETHNT_2, Hardware address is 5489-9857-1060
Last physical up time   : 2017-11-13 23:09:33 UTC-08:00
Last physical down time : 2017-11-13 23:09:32 UTC-08:00
Current system time: 2017-11-13 23:09:35-08:00
Hardware address is 5489-9857-1060
    Last 300 seconds input rate 26 bytes/sec, 0 packets/sec
    Last 300 seconds output rate 0 bytes/sec, 0 packets/sec
    Input: 31752 bytes, 242 packets
    Output: 8095 bytes, 120 packets
    Input:
      Unicast: 127 packets, Multicast: 94 packets
      Broadcast: 21 packets
    Output:
      Unicast: 114 packets, Multicast: 0 packets
      Broadcast: 6 packets
    Input bandwidth utilization  :    0%
    Output bandwidth utilization :    0%

<R2>display interface G0/0/1
GigabitEthernet0/0/1 current state : DOWN
Line protocol current state : DOWN
Description:
Route Port,The Maximum Transmit Unit is 1500
Internet protocol processing : disabled
IP Sending Frames' Format is PKTFMT_ETHNT_2, Hardware address is 5489-9857-1061
Last physical up time   : -
Last physical down time : 2017-11-13 22:54:58 UTC-08:00
Current system time: 2017-11-13 23:09:36-08:00
Hardware address is 5489-9857-1061
    Last 300 seconds input rate 0 bytes/sec, 0 packets/sec
    Last 300 seconds output rate 0 bytes/sec, 0 packets/sec
    Input: 0 bytes, 0 packets
    Output: 0 bytes, 0 packets
    Input:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Output:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Input bandwidth utilization  :    0%
    Output bandwidth utilization :    0%

<R2>display interface G0/0/2
GigabitEthernet0/0/2 current state : DOWN
Line protocol current state : DOWN
Description:
Route Port,The Maximum Transmit Unit is 1500
Internet protocol processing : disabled
IP Sending Frames' Format is PKTFMT_ETHNT_2, Hardware address is 5489-9857-1062
Last physical up time   : -
Last physical down time : 2017-11-13 22:54:58 UTC-08:00
Current system time: 2017-11-13 23:09:38-08:00
Hardware address is 5489-9857-1062
    Last 300 seconds input rate 0 bytes/sec, 0 packets/sec
    Last 300 seconds output rate 0 bytes/sec, 0 packets/sec
    Input: 0 bytes, 0 packets
    Output: 0 bytes, 0 packets
    Input:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Output:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Input bandwidth utilization  :    0%
    Output bandwidth utilization :    0%

<R2>display interface %s5
                      ^
Error: Wrong parameter found at '^' position.
<R2>